[package]
name = "vulkan-raymarching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = { version = "0.29.10", features = ["rwh_05"] }
