[package]
name = "vulkan-raymarching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = { version = "0.29.10", features = ["rwh_05"] }

[profile.small]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
inherits = 'release'